[gd_scene load_steps=14 format=3 uid="uid://cf1juv3eambk2"]

[ext_resource type="Script" uid="uid://b2awdyslyqqi" path="res://scripts/dice_roll.gd" id="1_ymbpj"]
[ext_resource type="Texture2D" uid="uid://d2l5n1grpp0eq" path="res://assets/dicePink.png" id="2_dlgop"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h535k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h535k"]
bg_color = Color(0.799906, 0.38501, 0.563392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(2, 4)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmlki"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmlki"]
bg_color = Color(0.799906, 0.38501, 0.563392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(2, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkppe"]
atlas = ExtResource("2_dlgop")
region = Rect2(0, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2xu8"]
atlas = ExtResource("2_dlgop")
region = Rect2(112, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h02f"]
atlas = ExtResource("2_dlgop")
region = Rect2(224, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7xae"]
atlas = ExtResource("2_dlgop")
region = Rect2(336, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahqho"]
atlas = ExtResource("2_dlgop")
region = Rect2(448, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqx4v"]
atlas = ExtResource("2_dlgop")
region = Rect2(560, 0, 112, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_w21ue"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkppe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2xu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h02f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7xae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahqho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqx4v")
}],
"loop": true,
"name": &"roll",
"speed": 15.0
}]

[node name="dice_roll" type="Node2D"]
script = ExtResource("1_ymbpj")

[node name="roll_btn" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -30.5
offset_right = 82.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_h535k")
theme_override_styles/hover = SubResource("StyleBoxFlat_h535k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cmlki")
theme_override_styles/normal = SubResource("StyleBoxFlat_cmlki")
text = "Roll!"

[node name="roll_sound" type="AudioStreamPlayer2D" parent="."]

[node name="d1" type="AnimatedSprite2D" parent="."]
position = Vector2(-70, -157)
sprite_frames = SubResource("SpriteFrames_w21ue")
animation = &"roll"
frame = 4
frame_progress = 0.338502

[node name="d2" type="AnimatedSprite2D" parent="."]
position = Vector2(70, -157)
sprite_frames = SubResource("SpriteFrames_w21ue")
animation = &"roll"

[connection signal="pressed" from="roll_btn" to="." method="_on_roll_btn_pressed"]
